<resources>
    <string name="app_name">FridgeMates</string>
    <string name="title_home">Residences</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="home_default">Home</string>
    <string name="search_home">Search Home</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_home_image">Add Home Image</string>
    <string name="location">Location</string>
    <string name="name">User</string>
    <string name="residence_name">Add Residence</string>
    <string name="home">Home</string>
    <string name="item_name">Item</string>
    <string name="search_item">Search Item</string>
    <string name="filter_items">Filter Items</string>
    <string name="new_item">New Item</string>
    <string name="title_items">Items</string>
    <string name="photo">Photo</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="home_name">Home Name</string>
    <string name="item_image">Item Image</string>
    <string name="select_date">Expiration Date</string>
    <string name="edithome">Edit Home</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="shopping_list">Open shopping list</string>
    <string name="owed">Owed</string>
    <string name="home_stock">You have X items in your house</string>
    <string name="members">Members</string>
    <string name="edit_home">Edit Home</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_register_now">Don\'t have an Account? Register Now!</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resident_email">Add Resident</string>
    <string name="location_name">Location</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="edit_profile">Edit</string>
    <string name="update_password">Update Password</string>
    <string name="check_item">Check Item</string>
    <string name="add_item_shopping_list">Add Item</string>
    <string name="item">Item</string>
    <string name="here_are_your_debts">Here are your debts/profits</string>
    <string name="welcome_back">Hello There!</string>
    <string name="all_settled_up">All settled up!</string>
    <string name="amount">Amount</string>
</resources>