<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:hint="@string/search_item"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/filter_items"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_shopping_list"
        android:hint="@string/shopping_list"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/shopping_list"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>
