<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.app.ui.home.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_itemsFragment"
            app:destination="@id/itemsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_homeEditFragment"
            app:destination="@id/homeEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.app.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/itemsFragment"
        android:name="com.example.app.ui.home.fragments.ItemsFragment"
        android:label="@string/title_items"
        tools:layout="@layout/fragment_items" >
        <action
            android:id="@+id/action_itemsFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_itemsFragment_to_itemAddFragment"
            app:destination="@id/itemAddFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeEditFragment"
        android:name="com.example.app.ui.home.fragments.HomeEditFragment"
        android:label="HomeEditFragment" >
        <action
            android:id="@+id/action_homeEditFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/itemAddFragment"
        android:name="com.example.app.ui.home.fragments.ItemAddFragment"
        android:label="ItemAddFragment" />
</navigation>