<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="86dp">

    <EditText
        android:id="@+id/home_name"
        android:layout_width="263dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/home_name"
        android:importantForAutofill="no"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/house_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/house_image"
        android:layout_width="351dp"
        android:layout_height="233dp"
        android:layout_marginTop="92dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/photo"
        android:scaleType="fitCenter"
        android:src="@drawable/house"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="41dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_image"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <EditText
        android:id="@+id/location_name"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="@string/location"
        android:hint="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/house_image"
        tools:ignore="TextFields" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:clickable="true"
        android:contentDescription="@string/add_home_image"
        app:layout_constraintBottom_toBottomOf="@+id/house_image"
        app:layout_constraintEnd_toEndOf="@+id/house_image"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="@+id/house_image"
        app:layout_constraintTop_toTopOf="@+id/house_image"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <Button
        android:id="@+id/delete_residence"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name" />

    <Button
        android:id="@+id/save_info"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_residence"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>