<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="238dp"
        android:layout_height="191dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="176dp"
            android:layout_height="168dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_profile_picture_button"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:contentDescription="@string/item_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:paddingBottom="15dp"
        android:maxLines="1"
        android:text="@string/name"
        android:textSize="20sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="15dp"
        android:maxLines="1"
        android:text="@string/email"
        android:textSize="20sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="15dp"
        android:hint="@string/update_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <Button
        android:id="@+id/save_profile"
        android:layout_width="309dp"
        android:layout_height="66dp"
        android:layout_margin="40dp"
        android:text="@string/save"
        android:textSize="20sp" />

</LinearLayout>