<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="199dp"
        android:layout_height="196dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:maxLines="1"
        android:layout_marginEnd="20dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:maxLines="1"
        android:text="@string/prompt_email"
        android:textAlignment="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="309dp"
        android:layout_height="66dp"
        android:layout_margin="40dp"
        android:text="@string/logout"
        android:textSize="20sp" />

</LinearLayout>