<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="86dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="205dp"
        android:layout_height="119dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/item_image"
        android:scaleType="fitCenter"
        android:src="@drawable/item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:clickable="true"
        android:contentDescription="@string/add_home_image"
        app:layout_constraintBottom_toBottomOf="@+id/item_image"
        app:layout_constraintEnd_toEndOf="@+id/item_image"
        app:layout_constraintTop_toTopOf="@+id/item_image"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <EditText
        android:id="@+id/item_name"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints="Name"
        android:hint="@string/item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_image"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/pick_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="@string/select_date"
        android:textSize="18sp"
        app:icon="@drawable/ic_baseline_event_24"
        app:layout_constraintBottom_toTopOf="@+id/save_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        app:layout_constraintVertical_bias="0.313" />

    <Button
        android:id="@+id/save_info"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:layout_marginBottom="172dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        app:layout_constraintVertical_bias="0.409" />


</androidx.constraintlayout.widget.ConstraintLayout>