<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/home_default"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/home_card_image"/>

        <ImageView
            android:id="@+id/home_card_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/house"
            android:scaleType="centerCrop"
            android:layout_centerVertical="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_name"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:contentDescription="@string/edithome"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/home_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_name"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:text="@string/home_stock"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/home_card_image"
            app:layout_constraintStart_toEndOf="@+id/home_card_image"
            app:layout_constraintTop_toTopOf="@id/home_card_image"/>

        <TextView
            android:id="@+id/shopping_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:text="@string/members"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="2dp"
            app:layout_constraintStart_toEndOf="@+id/home_card_image"
            app:layout_constraintTop_toBottomOf="@+id/home_stock"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>